Fixes to dark mode

--- a/app/assets/stylesheets/bulma/addons.scss
+++ b/app/assets/stylesheets/bulma/addons.scss
@@ -35,6 +35,10 @@ $max-widths: 10, 20, 25, 30, 40;
   height: 1000px;
 }
 
+.mt-1000 {
+  margin-top: 1000px;
+}
+
 .is-box-shadow-none {
   box-shadow: none !important;
 }
