--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -30,3 +30,13 @@ html {
     }
   }
 }
+
+.card {
+  .card-header-title {
+    a {
+      @media (prefers-color-scheme: dark) {
+        color: $turquoise;
+      }
+    }
+  }
+}
